revisi untuk logging dan pindah server

--- a/client.properties
+++ b/client.properties
@@ -2,8 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-realm=KERBEROS.COM
-kdc=KERBEROS.COM
+realm=MUKHLISON.COM
+kdc=MUKHLISON.COM
 #client.principal.name=test
 #client.password=test
 #service.principal.name=aaa
