--- a/jaas.conf
+++ b/jaas.conf
@@ -8,5 +8,5 @@ Server {
     useKeyTab=false
     storeKey=true
     useTicketCache=false
-    principal="test@KERBEROS.COM";
+    principal="test@MUKHLISON.COM";
 };
